tests/baselines/reference/mappedTypeIndexedAccess.errors.txt
tests/cases/compiler/mappedTypeIndexedAccess.ts(18,5): error TS2322: Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; } | { key: "bar"; value: 数字; }'.
  Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; }'.
    Types of property 'value' are incompatible.
      Type '数字' is not assignable to type '文字'.
tests/cases/compiler/mappedTypeIndexedAccess.ts(24,5): error TS2322: Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; } | { key: "bar"; value: 数字; }'.
  Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; }'.
    Types of property 'value' are incompatible.
      Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/mappedTypeIndexedAccess.ts (2 errors) ====
    // Repro from #15756
    
    type Pairs<T> = {
        [TKey in keyof T]: {
            key: TKey;
            value: T[TKey];
        };
    };
    
    type Pair<T> = Pairs<T>[keyof T];
    
    type FooBar = {
        foo: string;
        bar: number;
    };
    
    // Error expected here
    let pair1: Pair<FooBar> = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; } | { key: "bar"; value: 数字; }'.
!!! error TS2322:   Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type '数字' is not assignable to type '文字'.
        key: "foo",
        value: 3
    };
    
    // Error expected here
    let pair2: Pairs<FooBar>[keyof FooBar] = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; } | { key: "bar"; value: 数字; }'.
!!! error TS2322:   Type '{ key: "foo"; value: 数字; }' is not assignable to type '{ key: "foo"; value: 文字; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type '数字' is not assignable to type '文字'.
        key: "foo",
        value: 3
    };
    